testcases/valid/uninit_var_if.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn foo(): u64 {
        let n: u64;
        if false {
            n = 0;
            return n + 2;
        } else {
            n = 2;
            return n - 2;
        }
    }
}
